# spinning-cube

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/annaerob/cuuube/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/annaerob/cuuube/: AngleStore.java  MainActivity.java  NativeLibrary.java  OnSwipe.java  View.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/annaerob/cuuube/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
